--- a/style.css
+++ b/style.css
@@ -12,15 +12,18 @@
     height: 100vh;
 } */
 .container{
-    width: 100%;
-    height: 100%;
-    position: relative;
-    background: url("./Images/background.jpg");
+    background: url(./Images/bck1.png);
     background-size: cover;
     background-repeat: no-repeat;
-    
-   
-  
+}
+.container-2{
+    width: 100;
+    height: 100;
+    position: relative;
+    /*temporal el color*/
+    background-color:rgb(58, 56, 56);
+    background-size: cover;
+    background-repeat: no-repeat;
 }
 
 header{
@@ -29,6 +32,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-around;
+    background-color: #203657;
     padding: 10px;
 }
 
@@ -61,121 +65,121 @@ header ul li a:hover{
 }
 
 header .logo h1{
-font-size: 45px;
-color: #e8c573;
+    font-size: 45px;
+    color: #e8c573;
 }
 
 header .logo h1 span{
-font-size: 25px;
-color: #f2d280;
+    font-size: 25px;
+    color: #f2d280;
 }
 
 header .logo img{
-width: 60px;
-margin-right: -7px;
+    width: 256px;
+    margin-right: -7px;
 }
 
 
 .main{
-width: 100%;
-height: 90vh;
-display: flex;
-align-items: center;
-justify-content: center;
-padding-top: 10px;
+    width: 100%;
+    height: 90vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-top: 10px;
 }
 
 .main-one{
-width: 60%;
-/* background-color: pink; */
-height: 100%;
-padding-left: 100px;
-padding-top: 220px;
+    width: 60%;
+    /* background-color: pink; */
+    height: 100%;
+    padding-left: 100px;
+    padding-top: 220px;
 }
 .main-two{
-width: 40%;
-height: 100%;
+    width: 40%;
+    height: 100%;
 }
 
 .main-one .title{
-font-family: 'Roboto', sans-serif;
-font-weight: 400;
-font-style: italic;
-font-size: 34px;
-color: rgba(255, 255, 255, 0.829);
-letter-spacing: 3px;
-text-transform: uppercase;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 34px;
+    color: rgba(255, 255, 255, 0.829);
+    letter-spacing: 3px;
+    text-transform: uppercase;
 }
 .main-one h1{
-font-family: 'Roboto', sans-serif;
-font-weight:900;
-font-style: italic;
-font-size: 90px;
-color: #f2d280;
+    font-family: 'Roboto', sans-serif;
+    font-weight:900;
+    font-style: italic;
+    font-size: 56px;
+    color: #f2d280;
 }
 
 .main-one .subtitle{
-font-family: 'Courier New', Courier, monospace;
-font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-font-weight: 600;
-color: #ffd778;
-font-size: 24px;
+    font-family: 'Courier New', Courier, monospace;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 600;
+    color: #ffd778;
+    font-size: 24px;
 }
 .main-one button{
-font-weight: 500;
-border: 1px solid #f2d280;
-background: transparent;
-color: whitesmoke;
-font-size: 24px;
-font-family:'Roboto', sans-serif;
-padding: 7px 25px;
-border-radius: 25px;
-margin-top: 50px;
-cursor: pointer;
+    font-weight: 500;
+    border: 1px solid #f2d280;
+    background: transparent;
+    color: whitesmoke;
+    font-size: 24px;
+    font-family:'Roboto', sans-serif;
+    padding: 7px 25px;
+    border-radius: 25px;
+    margin-top: 50px;
+    cursor: pointer;
 }
 .main-one button:hover{
-background: linear-gradient(#e5d6b2 , #e8c573 );
-border: 3px solid #544115;
-color: black;
+    background: linear-gradient(#e5d6b2 , #e8c573 );
+    border: 3px solid #544115;
+    color: black;
 }
 .main-one .underline{
-height: 1px;
-width: 6%;
-margin-top: 50px;
-background-color: #e8c573;
+    height: 1px;
+    width: 6%;
+    margin-top: 50px;
+    background-color: #e8c573;
 }
 .main-one p{
-color: rgba(245, 245, 245, 0.803);
-width: 80%;
-margin-top: 10px;
-letter-spacing: 1px;
-font-family:Arial, Helvetica, sans-serif;
-font-size: 17px;
+    color: rgba(245, 245, 245, 0.803);
+    width: 80%;
+    margin-top: 10px;
+    letter-spacing: 1px;
+    font-family:Arial, Helvetica, sans-serif;
+    font-size: 17px;
 }
 
 .subpics{
-position: absolute;
-top: 50%;
-left: 60%;
-transform: translate(-50%, -50%);
-display: flex;
-align-items: center;
-flex-direction: column;
-justify-content: center;
+    position: absolute;
+    top: 50%;
+    left: 60%;
+    transform: translate(0%, -50%);
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .subpics img{
-width: 80px;
-cursor: pointer;
-margin: 18px 0;
+    width: 80px;
+    cursor: pointer;
+    margin: 18px 0;
 }
 
 .main-two img{
-width: 550px;
-transition: all 0.5s ease;
+    width: 550px;
+    transition: all 0.5s ease;
 }
 .subpics img:hover{
-transform: translateY(-5px);
+    transform: translateY(-5px);
 }
 
 #lista-cursos{
@@ -184,39 +188,112 @@ transform: translateY(-5px);
 }
 .encabezado{
     display: flex;
+    font-family: 'Roboto', sans-serif;
     justify-content: center
 }
 
-footer div li{
+.footer {
+    background-color: black;
+    padding-bottom: 1rem;
+    margin-top: 0.05rem;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-size: calc(16px + 0.4vw);
+
+}
+
+.contenedor_footer {
+    width: min(90%, 85rem);
+    margin: 0 auto;
+}
+
+.barra {
+    padding-top: 1.5rem;
+    
+    text-align: center;
+    display: block;
+    font-size: 1.8rem;
+}
+
+.barra__logo{
+    padding: 0.5rem;
+}
+
+@media (min-width: 768px) {
+    .barra {
+        padding-top: 3rem;
+        display: flex;
+        justify-content: space-between;
+        align-items: top;
+        text-align: center;
+    }
+
+    .barra__logo{
+        padding: 0rem;
+    }
+}
+
+.navegacion a {
+    color: white;
+    padding: 0.25rem;
+    gap: 1rem;
+    display: flex; 
+    flex-direction: column;
+}
+
+.navegacion a:hover {
+    color: #e8c573;
+}
+
+@media (min-width: 768px) {
+.navegacion a {
+        color: white;
+        gap: 1rem;
+        display: flex; 
+    }
+}
+
+footer div li {
     font-size: 45px;
     color: #e8c573;
 }
 
-footer li span{
+footer li span {
     color: #f2d280;
 }
-.navegacion{
-    font-weight: bold;
-    text-decoration: none;
+
+.direccion li {
+    
+    font-size: calc(16px + 0.4vw);
+    text-align: center;
+    color: #e8c573;
+    padding: 0.25rem;
 }
 
-.social-icons{
+@media (min-width: 768px) {
+    .direccion li {
+        font-size: calc(12px + 0.4vw);
+        text-align: center;
+        color: white;
+    }
+}
+.social-icons {
     display: flex;
     justify-content: center;
     list-style: none;
     height: fit-content;
-    padding: 0;
+    padding: 1rem;
     overflow: hidden;
 }
 
-.social-icons li{
-    margin: 10px 10px;
+.social-icons li {
+    margin: 3px 3px;
 }
 
-.social-icons li a{
+.social-icons li a {
     font-size: 30px;
-    height: 80px;
-    width: 80px;
+    height: 60px;
+    width: 60px;
     border-radius: 50%;
     display: flex;
     align-items: center;
@@ -224,11 +301,11 @@ footer li span{
     text-decoration: none;
     color: white;
     position: relative;
-    transition:0.5s ease;
+    transition: 0.5s ease;
     text-shadow: 0 0 30px;
 }
 
-.social-icons li a::after{
+.social-icons li a::after {
     content: '';
     position: absolute;
     top: 0;
@@ -242,6 +319,139 @@ footer li span{
     border: 1px solid rgba(255, 255, 255, 0.125);
 }
 
-.social-icons li a:hover{
+.social-icons li a:hover {
     text-shadow: 0 0 0px
+}
+
+
+.container_servicios{
+    display: flex;
+}
+.card{
+    background-color: #ffffff;
+    border-radius: 24px;
+    padding: 16px;
+    overflow: hidden;
+    transform: translate(0);
+    margin: 16px;
+    transition: 0.25s;
+}
+
+.card:hover{
+    transform: scale(1.03);
+}
+
+.card::before{
+    content: "";
+    position: absolute;
+    top: -64px;
+    left: -64px;
+    width: 150%;
+    height: 76%;
+    transform: rotate(-12deg);
+    z-index: -1;
+}
+
+.card.card-yellow::before{
+    background: linear-gradient(170deg, #d97904, #f2b705);
+}
+
+.card.card-blue::before{
+    background: linear-gradient(170deg, #235b8c, #03a696);
+}
+
+.card.card-red::before{
+    background: linear-gradient(170deg, #d9042b, #f13a5c);
+}
+.card .logo{
+    height: 24px;
+    padding: 8px;
+}
+
+.card h2{
+    font-family: "Myriad Bold Italic";
+    font-size: 80px;
+    text-transform: uppercase;
+    line-height: 64px;
+    color:#ffffff;
+    margin: 0;
+    margin-top: 24px;
+}
+
+/* .card .product{
+    height: 180px;
+    width: 300px;
+    object-fit: contain;
+    transform: rotate(-35deg);
+    margin-top: -42px;
+    margin-left: -32px;
+    margin-right: 24px;
+} */
+
+.card .price{
+    text-align: right;
+    margin-top: -24px;
+}
+
+.card .price :is(h6,h4){
+    font-family: "Myriad Bold";
+    color:#ffffff;
+    margin: 0;
+}
+
+.card .price h6{
+    color: #a3a3a3;
+    font-size: 12px;
+    text-decoration: line-through;
+}
+
+.card .price h4{
+    font-size: 24px;
+    margin-top: -4px;
+}
+
+.card.card-yellow .price h4{
+    background: linear-gradient(170deg, #d97904, #f2b705);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.card.card-blue .price h4{
+    background: linear-gradient(170deg, #235b8c, #03a696);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.card.card-red .price h4{
+    background: linear-gradient(170deg, #d9042b, #f13a5c);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+.card .button-right{
+    text-align: right;
+    margin-top: 64px;
+}
+
+.card button{
+    font-family: "Myriad Semibold";
+    font-size: 16px;
+    text-transform: uppercase;
+    color:#ffffff;
+    padding: 8px 32px;
+    border: none;
+    border-radius: 48px;
+    cursor: pointer;
+}
+
+.card.card-yellow button{
+    background: linear-gradient(170deg, #d97904, #f2b705);
+}
+
+.card.card-blue button{
+    background: linear-gradient(170deg, #235b8c, #03a696);
+}
+
+.card.card-red button{
+    background: linear-gradient(170deg, #d9042b, #f13a5c);
 }
